<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/b"
    tools:context=".MainActivity2">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/i"
            android:src="@drawable/b"
           android:scaleType="fitXY"/>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:layout_gravity="center"
        android:textStyle="bold"/>
     <GridLayout
         android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:columnCount="3"
         android:rowCount="4">
         <ImageView
             android:layout_width="120dp"
             android:layout_height="100dp"
             android:src="@drawable/cap"
             android:scaleType="centerCrop"
             android:contentDescription="@string/image1"
             android:layout_margin="3dp"

             />
         <ImageView
             android:layout_width="120dp"
             android:layout_height="100dp"
             android:src="@drawable/americano"
             android:scaleType="centerCrop"
             android:layout_margin="3dp"
             android:contentDescription="@string/image2"/>
             <ImageView
                 android:layout_width="120dp"
                 android:layout_height="100dp"
                 android:src="@drawable/machito"
                 android:scaleType="centerCrop"
                 android:layout_margin="3dp"
                 android:contentDescription="@string/image3"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/txt1"
                     android:textStyle="bold"
                     android:layout_marginStart="10dp"

                     android:textSize="15sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/a"
                        android:textStyle="bold"
                        android:layout_marginStart="15dp"

                        android:textSize="15sp"/>
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/b"
                           android:textStyle="bold"
                           android:layout_marginStart="20dp"

                           android:textSize="15sp"/>
                       <ImageView
                           android:layout_width="120dp"
                           android:layout_height="100dp"
                           android:src="@drawable/lungo"
                           android:scaleType="centerCrop"
                           android:contentDescription="@string/image4"/>
                           <ImageView
                               android:layout_width="120dp"
                               android:layout_height="100dp"
                               android:src="@drawable/black"
                               android:scaleType="centerCrop"
                               android:contentDescription="@string/image5"/>
                              <ImageView
                                  android:layout_width="120dp"
                                  android:layout_height="100dp"
                                  android:src="@drawable/t"
                                  android:scaleType="centerCrop"
                                  android:contentDescription="@string/image6"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:textStyle="bold"
                android:textSize="15sp"

                android:layout_marginStart="10dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/d"
             android:textStyle="bold"
             android:textSize="15sp"

             android:layout_marginStart="10dp"/>
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/e"
     android:textStyle="bold"
     android:textSize="15sp"

     android:layout_marginStart="10dp"/>
         <ImageView
             android:layout_width="120dp"
             android:layout_height="100dp"
             android:src="@drawable/frappe"
             android:scaleType="centerCrop"
             android:contentDescription="@string/image7"/>
            <ImageView
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:src="@drawable/ristretto"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image8"/>
         <ImageView
             android:layout_width="120dp"
             android:layout_height="100dp"
             android:contentDescription="@string/image9"
             android:src="@drawable/aff"
             android:scaleType="centerCrop"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/f"
               android:textSize="15sp"

               android:textStyle="bold"
               android:layout_marginStart="10dp"/>
              <TextView
                  android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                  android:text="@string/g"
                  android:textSize="15sp"
                  android:textStyle="bold"
                  android:layout_marginStart="15dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/h"
             android:textStyle="bold"
             android:layout_marginStart="15dp"
             android:textSize="15sp"/>
     </GridLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
       android:background="@drawable/next"
        android:textColor="@color/white"
        android:id="@+id/next"
        android:layout_margin="20dp"/>
</LinearLayout>