<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image"
        android:src="@drawable/coffee"
        android:scaleType="centerCrop"/>
        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt2"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
       android:layout_gravity="center_horizontal"
        android:layout_marginTop="280dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/txt3"
         android:textColor="@color/white"
         android:layout_gravity="center"
         android:textSize="15sp"
         android:textStyle="bold"
         android:layout_marginBottom="8dp"/>
      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/next"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="bottom"
          android:layout_margin="50dp"
          android:text="@string/btn"
          android:background="@drawable/custom"/>
</FrameLayout>