<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/b"
    tools:context=".MainActivity4">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/txt1"
        android:scaleType="fitXY"
        android:id="@+id/show"
        android:layout_margin="5dp"/>
       <TextView
           android:layout_below="@id/show"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/display"
           android:text="@string/txt1"
           android:textSize="20sp"
           android:layout_margin="5dp"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/rate"
            android:textSize="20sp"
            android:id="@+id/rate"
            android:layout_margin="20dp"
            android:textStyle="bold"/>
    <Button
        android:id="@+id/purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/rate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/purchase"
        android:backgroundTint="@color/black"
        android:layout_margin="20dp"/>
</RelativeLayout>